tests/error_syntax.js.out
[WILDCARD]tests/error_syntax.js:3:5 Uncaught SyntaxError: Unexpected identifier

3 (the following is a syntax error  ^^ ! )
       ~~~~~~~~~

